YAML/configmap.yml
kubectl create configmap \
> webapp-config-map --from-literal=APP_COLOR=darkblue

kubectl create configmap webapp-config-map --from-literal=APP_COLOR=darkblue

apiVersion: v1
kind: Pod
metadata:
  name: first-pod
  labels:
    app: first-app
spec:
  containers:
    - name: nginx-container
      image: nginx

      envFrom:
        - configMapRef:
            name: webapp-config-map


apiVersion: v1
kind: Pod
metadata:
  creationTimestamp: null
  labels:
    name: webapp-color
  name: webapp-color
  selfLink: /api/v1/namespaces/default/pods/webapp-color
spec:
  containers:
  - envFrom:
    - configMapRef:
        name: webapp-config-map
    image: kodekloud/webapp-color
    imagePullPolicy: Always
    name: webapp-color
