YAML/daemonsets.yml

apiVersion: apps/v1
kind: DaemonSet
metadata:
  name: elasticsearch
  labels:
    app: myelastic

spec:
  template:
    metadata:
      name: elasticsearch
      labels:
         app: myelastic

    spec:
     containers:
     - name: elasticsearch
       image: k8s.gcr.io/fluentd-elasticsearch:1.20

  selector:
      matchLabels:
          app: myelastic


kubectl create deployment elasticsearch --image=k8s.gcr.io/fluentd-elasticsearch:1.20 -n kube-system --dry-run=client -o yaml > ds.yaml
"remove the replicas and strategy fields from the YAML file using a text editor. Also, change the kind from Deployment to DaemonSet"


apiVersion: apps/v1
kind: DaemonSet
metadata:
  name: elasticsearch
  namespace: kube-system

spec:
  selector:
    matchLabels:
      name: elasticsearch
  template:
    metadata:
      labels:
        name: elasticsearch
    spec:

      containers:
      - name: elasticsearch
        image: k8s.gcr.io/fluentd-elasticsearch:1.20
