YAML/secret.yml
apiVersion: v1
kind: Secret
metadata:
  name: db-secret
data:
  DB_Host: c3FsMDE=
  DB_User: cm9vdA==
  DB_Password: cGFzc3dvcmQxMjM=




apiVersion: v1
kind: Pod

metadata:
  name: webapp-pod
  labels:
    app: webapp-pod

spec:
  containers:
    - name: webapp-pod
      image: kodekloud/simple-webapp-mysql

      envFrom:
        - secretRef:
            name: db-secret


kubectl create secret generic db-secret --from-literal=DB_Host=sql01 --from-literal=DB_User=root --from-literal=DB_Password=password123
