YAML/staticpod.yml
apiVersion: v1

#P capital
kind: Pod

metadata:
  name: static-busybox
  labels:
    app: static-busybox

spec:
  containers:
    - name: nginx-container
      image: busybox


      command:
        - sh
        - "-c"
        - echo Hello Kubernetes! && sleep 1000



apiVersion: v1
kind: Pod
metadata:
  name: static-busybox

spec:
  containers:
    - name: static-busybox
      image: busybox
      command:
      - "sleep"
      - "1000"
